[package]
name = "polywrap_http_plugin"
version = "0.0.1-beta.4"
license = "MIT"
description = "Polywrap rust HTTP plugin"
edition = "2021"

[dependencies]
polywrap_core = { git = "https://github.com/polywrap/rust-client", branch = "migrate-polywrap-serde" }
polywrap_plugin = { git = "https://github.com/polywrap/rust-client", branch = "migrate-polywrap-serde" }
polywrap_msgpack = { git = "https://github.com/polywrap/rust-client", branch = "migrate-polywrap-serde" }
polywrap_resolvers = { git = "https://github.com/polywrap/rust-client", branch = "migrate-polywrap-serde" }
wrap_manifest_schemas = { git = "https://github.com/polywrap/rust-client", branch = "migrate-polywrap-serde" }

ureq = "2.5.0"
serde = {version = "1.0.145", features = ["derive"]}
base64 = "0.13.0"
multipart = "0.17.0"

[dev-dependencies]
polywrap_client = { git = "https://github.com/polywrap/rust-client", branch = "migrate-polywrap-serde" }
