[package]
name = "polywrap_http_plugin"
version = "0.0.1-beta.4"
license = "MIT"
description = "Polywrap rust HTTP plugin"
edition = "2021"

[dependencies]
polywrap_core = { version = "0.1.6-beta" }
polywrap_plugin = { version = "0.1.6-beta" }
polywrap_msgpack = { version = "0.1.6-beta" }
polywrap_resolvers = { version = "0.1.6-beta" }
wrap_manifest_schemas = { version = "0.1.6-beta" }

ureq = "2.5.0"
serde = {version = "1.0.145", features = ["derive"]}
base64 = "0.13.0"
multipart = "0.17.0"
thiserror = "1.0.40"
serde_json = "1.0.99"

[dev-dependencies]
polywrap_client = { version = "0.1.6-beta" }
